implement processResult function to listen to results topic and send result to jobs topic